# docs/swagger.json
@@ -1021,7 +1021,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/httptransport.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httptransport.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "$ref": "#/definitions/httptransport.CompleteTaskResponseBody"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -1488,6 +1500,17 @@
                 },
                 "tenant_id": {
                     "type": "string"
+                }
+            }
+        },
+        "httptransport.CompleteTaskResponseBody": {
+            "type": "object",
+            "properties": {
+                "instance": {
+                    "$ref": "#/definitions/httptransport.InstanceDTO"
+                },
+                "task": {
+                    "$ref": "#/definitions/httptransport.TaskDTO"
                 }
             }
         },
